Install jQuery and added assets

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Code Challenge | Build a Homepage | BeenVerified</title>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <h1>Build a Homepage</h1>
