--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,72 @@
   <title>Code Challenge | Build a Homepage | BeenVerified</title>
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Build a Homepage</h1>
+  <!-- FIXED NAVBAR -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">SomeCompany</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="jumbotron header-bg-img">
+    <div class="container header-transparent-layer">
+      <h1>Hello, world!</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem blandit, interdum augue at, blandit libero. Quisque et fermentum libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    </div>
+  </div>
+
+  <div class="container sub-head-area">
+      <div class="col-md-6">
+        <img src="assets/layers.png">
+      </div>
+      <div class="col-md-6">
+        <h2>Redefining the web</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla odio ac dignissim lacinia. Nunc nec mauris augue. Nulla vel est nisi. Sed efficitur tellus at nisi lobortis iaculis. Nullam leo urna, sagittis sodales eros in, volutpat aliquet nibh. Nam efficitur enim ac ex semper vehicula. Morbi iaculis lorem id neque lacinia semper.</p>
+        <p>Aliquam eu sem at ex interdum ornare ac ut diam. Fusce ut sapien molestie, hendrerit felis sit amet, condimentum arcu. Praesent vestibulum eros tincidunt mattis finibus.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      </div>
+  </div>
+
+
+
+<!--   <div class="container">
+    <div class="row">
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+      <div class="col-md-1">.col-md-1</div>
+    </div>
+  </div> -->
+
+  <!-- SCRIPTS -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
