--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,43 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+
+  <div class="transparent-layer">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SomeCompany</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem blandit, interdum augue at, blandit libero. Quisque et fermentum libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      </div>
+    </div>
+  <div>
+
+
+
+
   <!-- FIXED NAVBAR -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <!-- <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -30,17 +65,19 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
-  <div class="jumbotron header-bg-img">
-    <div class="container header-transparent-layer">
+
+
+<!--   <div class="jumbotron transparent-layer">
+    <div class="container">
       <h1>Hello, world!</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem blandit, interdum augue at, blandit libero. Quisque et fermentum libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="container sub-head-area">
+  <!-- <div class="container sub-head-area">
       <div class="col-md-6">
         <img src="assets/layers.png">
       </div>
@@ -50,7 +87,7 @@
         <p>Aliquam eu sem at ex interdum ornare ac ut diam. Fusce ut sapien molestie, hendrerit felis sit amet, condimentum arcu. Praesent vestibulum eros tincidunt mattis finibus.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
-  </div>
+  </div> -->
 
 
 
