--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,14 @@
   <title>Hello World! | BeenVerified</title>
   <!-- Bootstrap -->
   <link href="css/vendors/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link  href="css/vendors/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
 
   <!-- BEGIN: NAVBAR ////////////////////////////////////////////////////// -->
-  <nav class="navbar navbar-default navbar-static-top">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -35,28 +37,295 @@
       </div>
     </div>
   </nav>
-  <!-- END: NAVBAR ////////////////////////////////////////////////////// -->
+  <!-- END: NAVBAR //////////////////////////////////////////////////////// -->
 
-  <!-- BEGIN: JUMBOTRON ///////////////////////////////////////////////// -->
+  <!-- BEGIN: JUMBOTRON /////////////////////////////////////////////////// -->
   <div class="jumbotron">
     <div class="container">
-      <h1>Hello, world!</h1>
+      <h2>Hello, world!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a></p>
     </div>
   </div>
-  <!-- BEGIN: JUMBOTRON ///////////////////////////////////////////////// -->
+  <!-- END: JUMBOTRON ///////////////////////////////////////////////////// -->
 
+  <!-- BEGIN: SUBHEAD ///////////////////////////////////////////////////// -->
+  <article class="subhead">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+        <h2>Redefining the web</h2>
+          <img src="assets/layers.png" alt="Redefining the web, SomeCompany">
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a></p>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- END: SUBHEAD /////////////////////////////////////////////////////// -->
 
+  <!-- BEGIN: SERVICES //////////////////////////////////////////////////// -->
+  <article class="services">
+    <div class="container">
+      <h2>Services</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
 
+      <div class="row">
+        <div class="col-xs-12 col-sm-4">
+        <i class="fa fa-lightbulb-o fa-2x" aria-hidden="true"></i>
+          <h3>Unique Layouts</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
 
+        <div class="col-xs-12 col-sm-4">
+          <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>
+          <h3>Responsive</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
 
+        <div class="col-xs-12 col-sm-4">
+          <i class="fa fa-spinner fa-2x" aria-hidden="true"></i>
+          <h3>Ajax Transitions</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
 
+        <div class="col-xs-12 col-sm-4">
+          <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i>
+          <h3>E-Commerce</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
 
+        <div class="col-xs-12 col-sm-4">
+          <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+          <h3>Unlimited Portfolios</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
 
+        <div class="col-xs-12 col-sm-4">
+          <i class="fa fa-bolt fa-2x" aria-hidden="true"></i>
+          <h3>Powerful</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- END: SERVICES ////////////////////////////////////////////////////// -->
 
+  <!-- BEGIN: TEAM //////////////////////////////////////////////////////// -->
+  <article class="team">
+    <div class="container">
+      <h2>Our Team</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
 
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="headshot">
+            <img src="../assets/head-shots/riffraff.jpg" alt="Riff Raff">
+          </div>
+          <div class="team-name">Riff Raff</div>
+          <span class="team-title">Founder</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+          <a href="#">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> 
+          </a>
+          <a href="#">
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
 
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="headshot">
+            <img src="../assets/head-shots/2chainz.jpeg" alt="2 Chainz">
+          </div>
+          <div class="team-name">2 Chainz</div>
+          <span class="team-title">Chief Technology Officer</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+          <a href="#">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> 
+          </a>
+          <a href="#">
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="headshot">
+            <img src="../assets/head-shots/nene.jpeg" alt="NeNe Leakes">
+          </div>
+          <div class="team-name">NeNe Leakes</div>
+          <span class="team-title">Director of Marketing</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+          <a href="#">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> 
+          </a>
+          <a href="#">
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="headshot">
+            <img src="../assets/head-shots/miley.jpg" alt="Miley Cyrus">
+          </div>
+          <div class="team-name">Miley Cyrus</div>
+          <span class="team-title">Creative Director</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ut, inventore quibusdam consequatur eos.</p>
+          <a href="#">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> 
+          </a>
+          <a href="#">
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- END: TEAM ////////////////////////////////////////////////////////// -->
+
+  <!-- START: CLIENTS ///////////////////////////////////////////////////// -->
+  <article class="clients">
+    <div class="container">
+      <ul>
+        <li>
+          <object type="image/svg+xml" data="../assets/logo-nike.svg" class="footer-svg-sm">
+            <!-- <img src="web_square.png" alt="Blue Square"/> -->
+          </object>
+          <!-- <img src="../assets/logo-nike.svg" alt=""> -->
+        </li>
+        <li>
+          <object type="image/svg+xml" data="../assets/logo-ms.svg" class="footer-svg">
+            <!-- <img src="web_square.png" alt="Blue Square"/> -->
+          </object>
+          <!-- <img src="../assets/logo-ms.svg" al=""> -->
+        </li>
+        <li>
+          <object type="image/svg+xml" data="../assets/logo-github.svg" class="footer-svg">
+            <!-- <img src="web_square.png" alt="Blue Square"/> -->
+          </object>
+          <!-- <img src="../assets/logo-github.svg" alt=""> -->
+        </li>
+      </ul>
+    </div>
+  </article>
+  <!-- END: CLIENTS /////////////////////////////////////////////////////// -->
+
+  <!-- BEGIN: CONTACT ///////////////////////////////////////////////////// -->
+  <article class="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <form action="" class="contact-form">
+            <input type="text" placeholder="Name">
+
+            <input type="text" placeholder="Email">
+
+            <input type="text" placeholder="Subject">
+
+            <textarea type="text" placeholder="Message"></textarea>
+
+            <p><a class="btn btn-default btn-lg" href="#" role="button">Submit</a></p>
+          </form>
+        </div>
+        <div class="contact-company col-xs-12 col-sm-6">
+          <h4>Address</h4>
+          307 5th Ave, 16th Floor<br />
+          New York, NY 10016
+
+          <h4>Phone</h4>
+          212-222-1234
+
+          <h4>Fax</h4>
+          212-630-7862
+
+          <h4>Email</h4>
+          info@somecompany.com
+
+          <h4>Connect</h4>
+          <a href="#">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> 
+          </a>
+          <a href="#">
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i>
+          </a>
+          <a href="#">
+            <i class="fa fa-vimeo-square fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </article>
+  <!-- END: CONTACT /////////////////////////////////////////////////////// -->
+
+  <!-- BEGIN: FOOTER ////////////////////////////////////////////////////// -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 col-sm-3">
+          <h4>About</h4>
+          <ul>
+            <li><a href="">Company</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">Engineering</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <h4>Team Solutions</h4>
+          <ul>
+            <li><a href="">Marketing</a></li>
+            <li><a href="">Project Management</a></li>
+            <li><a href="">Managers</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <h4>Apps</h4>
+          <ul>
+            <li><a href="">Intergrations</a></li>
+            <li><a href="">iOS</a></li>
+            <li><a href="">Android</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-sm-3">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="">Customer Service</a></li>
+            <li><a href="">Terms &amp; Privacy</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Developers</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">&copy; 2016 SomeCompany.com</div>
+    </div>
+  </footer>
+  <!-- END: FOOTER ///////////////////////////////////////////////////////// -->
 
   <!-- SCRIPTS -->
   <script src="js/vendors/jquery.min.js"></script>
