Completed Tablet and Desktop layout

--- a/client/index.html
+++ b/client/index.html
@@ -40,11 +40,30 @@
   <!-- END: NAVBAR //////////////////////////////////////////////////////// -->
 
   <!-- BEGIN: JUMBOTRON /////////////////////////////////////////////////// -->
-  <div class="jumbotron">
-    <div class="container">
-      <h2>Hello, world!</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a></p>
+  <div class="jumbotron-bg-img">
+    <div class="jumbotron">
+
+      <nav class="navbar navbar-default navbar-desktop">
+        <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">SomeCompany</a>
+        </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <div class="container">
+        <h2>Hello, world!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a></p>
+      </div>
     </div>
   </div>
   <!-- END: JUMBOTRON ///////////////////////////////////////////////////// -->
@@ -54,10 +73,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6">
-        <h2>Redefining the web</h2>
+          <h2>Redefining the web</h2>
           <img src="assets/layers.png" alt="Redefining the web, SomeCompany">
         </div>
         <div class="col-xs-12 col-sm-6">
+          <h2>Redefining the web</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem assumenda ullam cum, quisquam dolorem laboriosam nulla dicta! Quaerat dignissimos ea eos fugiat sit culpa, ab illum. Dignissimos eligendi, est.</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a></p>
@@ -244,7 +264,7 @@
             <p><a class="btn btn-default btn-lg" href="#" role="button">Submit</a></p>
           </form>
         </div>
-        <div class="contact-company col-xs-12 col-sm-6">
+        <div class="contact-company col-xs-12 col-sm-3">
           <h4>Address</h4>
           307 5th Ave, 16th Floor<br />
           New York, NY 10016
@@ -254,7 +274,9 @@
 
           <h4>Fax</h4>
           212-630-7862
+        </div>
 
+        <div class="contact-company col-xs-12 col-sm-3">
           <h4>Email</h4>
           info@somecompany.com
 
