--- a/client/index.html
+++ b/client/index.html
@@ -350,7 +350,11 @@
   <!-- END: FOOTER ///////////////////////////////////////////////////////// -->
 
   <!-- SCRIPTS -->
-  <script src="js/vendors/jquery.min.js"></script>
+  <!-- <script src="js/vendors/jquery.min.js"></script> -->
+  <script
+  src="//code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
   <script src="js/vendors/bootstrap.min.js"></script>
 </body>
 </html>
